# eows

./: .gitignore  CONTRIBUTING.md  README.md
bash/: install-3rdparty-linux-ubuntu-14.04.sh  make-pkg-tgz.sh
doc/: authentication.md  oauth2.md  wcs.md  wtscs.md  wtsps.md  wtss.md
share/eows/config/: algorithms.json  auth.json  eows.json  eows.json.in  geo_arrays.json  ows.json  srs.json  wcs.json  wms.json  wtscs.json
src/cmake_test/: CMakeLists.txt
src/eows/: build_config.hpp.in  core.hpp  exception.hpp  version.hpp  version.hpp.in
src/eows/app_server/: exception.hpp  main.cpp
src/eows/auth/: data_types.hpp  defines.hpp  exception.hpp  manager.cpp  manager.hpp  routes.cpp  routes.hpp  utils.cpp  utils.hpp
src/eows/core/: app_settings.cpp  app_settings.hpp  data_types.hpp  dataset.cpp  dataset.hpp  defines.hpp  exception.hpp  file_remover.cpp  file_remover.hpp  http_request.hpp  http_response.cpp  http_response.hpp  http_server.hpp  http_server_builder.cpp  http_server_builder.hpp  logger.hpp  service_operations_manager.cpp  service_operations_manager.hpp  utils.cpp  utils.hpp  web_service_handler.cpp  web_service_handler.hpp
src/eows/echo/: echo.cpp  echo.hpp
src/eows/gdal/: band.cpp  band.hpp  data_types.hpp  dataset_geotiff.cpp  dataset_geotiff.hpp  defines.hpp  exception.hpp  gdal.cpp  gdal.hpp  raster.cpp  raster.hpp  utils.cpp  utils.hpp
src/eows/geoarray/: data_types.cpp  data_types.hpp  defines.hpp  exception.hpp  geoarray_manager.cpp  geoarray_manager.hpp  utils.cpp  utils.hpp
www/oauth2/: error.html  info.html  login.html
(+102 files in other folders)
